Scroll fix, overflow mobile fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,13 @@ body{
     overflow-x: hidden;
 }
 
+html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative
+  }
+
 .lightGreenText{
     color: $light-green;
 }
